Fix overlapping buttons in some languages in Files app.
In some languages, words are longer on average than in English. For example, this is a case of German. Therefore, buttons in the photo editor got overlapping, because they were consuming too much space.

This patch resolves this issue by specyfing the max width for the buttons with captions, and increasing the minimum width of the window when the buttons' captions appear.

TEST=Tested manually on both: english and german.
BUG=126805

Review URL: https://codereview.chromium.org/26445004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@228090 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ad90cfab9707820fcfc16bbcdb2299df1cd2aeb3

--- a/chrome/browser/resources/file_manager/css/gallery.css
+++ b/chrome/browser/resources/file_manager/css/gallery.css
@@ -587,11 +587,12 @@ body {
 }
 
 /* Show labels if there is enough space. */
-@media (min-width: 1050px) {
+@media (min-width: 1180px) {
 
   .gallery .edit-main button,
   .gallery .edit-main button[disabled] {
     background-position: 5px center;
+    max-width: 60px;
     min-width: 0;  /* Reset. */
     padding: 0 10px 0 35px;
     width: auto;
